--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300;400;600;700&display=swap');
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body{
+  background: radial-gradient(circle, rgba(41,54,121,1) 0%, rgba(54,46,47,1) 100%);
+}
+
+.container{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  font-family: 'Poppins', sans-serif;
+  
+
+  background: rgba(0, 0, 0, 0.17);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.1px);
+  -webkit-backdrop-filter: blur(5.1px);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+
+  margin-top: 50px;
 }
