--- a/src/Components/TodoItem/TodoItem.css
+++ b/src/Components/TodoItem/TodoItem.css
@@ -1,17 +1,7 @@
-.todoItem{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 500px;
-    height: auto;
-    min-height: 50px;
-    max-height: 100px;
-    background-image: linear-gradient( 83.2deg,  rgba(150,93,233,1) 10.8%, rgba(99,88,238,1) 94.3% );    
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    
+
+
+.bg-todo-item{
+    background-image: linear-gradient( 83.2deg,  rgba(150,93,233,1) 10.8%, rgba(99,88,238,1) 94.3% ) !important;   
 }
 
 .todoItem-p{
